# medicamentos

./: amostra_medicamentos.csv  amostra_tabela.py  api.py  check_anvisa_duplicates.py  check_duplicates.py  cmed_extract.py  main.py  medicamentos.db  normalizar_tabelas.py  pyproject.toml  update_database.py
