[project]
name = "medicamentos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "fastapi>=0.115.12",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.6",
    "pydantic>=2.11.1",
    "pypdf2>=3.0.1",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
    "xlrd>=2.0.1",
]
